--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,19 +8,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AircraftWarAndroid">
-        <activity
-            android:name=".LauncherActivity"
-            android:exported="true"
-            android:label="@string/title_activity_launcher"
-            android:theme="@style/Theme.AircraftWarAndroid.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".MainActivity"
+        <activity android:name=".LogInActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,6 +16,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".LauncherActivity"
+            android:exported="true"
+            android:label="@string/title_activity_launcher"
+            android:theme="@style/Theme.AircraftWarAndroid.NoActionBar">
+
+        </activity>
+
+        <activity android:name=".RegisterActivity"/>
+        <activity android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/title_activity_launcher"
+            android:theme="@style/Theme.AircraftWarAndroid.NoActionBar">
+
+        </activity>
+
+
     </application>
 
 </manifest>
